scrollbar fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29553,3 +29553,26 @@ body.dark-mode .featured-creator .container-fluid .featured-creator-inr .row-cus
 .p-galleria-item-nav-onhover .p-galleria-item-nav {
   display: none;
 }
+
+::-webkit-scrollbar {
+  width: 0.8em
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(242, 244, 248, 0.5);
+  border-radius: 100vw;
+  margin-block: .5em ;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #366CE3;
+  border-radius: 100vw;
+  border: 1px solid rgba(242, 244, 248, 0.5);
+}
+
+@supports (scrollbar-color: #366CE3 rgba(242, 244, 248, 0.5)) {
+  * {
+    scrollbar-color: #366CE3 rgba(242, 244, 248, 0.5);
+    scrollbar-width: thin;
+  }
+}
